<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/income_date" />
            <EditText
                android:id="@+id/income_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:gravity="center"
                android:focusable="false"
                android:hint="@string/date_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/income_price" />
            <EditText
                android:id="@+id/income_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:gravity="right"
                android:maxLength="11"
                android:inputType="number"
                android:hint="@string/price_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/income_contents" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:maxLines="2"
                android:maxLength="20"
                android:hint="@string/content_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/income_category" />
            <Spinner
                android:id="@+id/income_category_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/income_category_contents">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:text="@string/income_remark" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textColorHint="@color/White"
                android:maxLines="2"
                android:maxLength="50"
                android:hint="@string/remark_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/okay"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:text="@string/cancel"/>
        </TableRow>
    </LinearLayout>
</RelativeLayout>