<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/White">

    <RelativeLayout
        android:id="@+id/spend_detail_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/spend_detail_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/spend_date" />
            <EditText
                android:id="@+id/spend_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_rounded"
                android:drawableLeft="@drawable/iconmonstr_calendar"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/Black"
                android:gravity="center"
                android:focusable="false"
                android:hint="@string/date_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/spend_price" />
            <EditText
                android:id="@+id/spend_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_rounded"
                android:drawableLeft="@drawable/iconmonstr_currency"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/Black"
                android:gravity="right|center"
                android:nextFocusDown="@+id/spend_contents"
                android:maxLength="11"
                android:inputType="number"
                android:hint="@string/price_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/spend_contents" />
            <EditText
                android:id="@+id/spend_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_rounded"
                android:drawableLeft="@drawable/iconmonstr_note"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/Black"
                android:maxLines="1"
                android:maxLength="20"
                android:hint="@string/content_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/spend_category" />
            <Spinner
                android:id="@+id/spend_category_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dropdown">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/spend_method" />
            <Spinner
                android:id="@+id/spend_method_contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:spinnerMode="dropdown"
                android:entries="@array/spend_method_contents">
            </Spinner>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:text="@string/spend_remark" />
            <EditText
                android:id="@+id/spend_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_rounded"
                android:drawableLeft="@drawable/iconmonstr_note"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/Black"
                android:maxLines="2"
                android:maxLength="20"
                android:hint="@string/remark_hint" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp">
            <Button
                android:id="@+id/spend_okay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:text="@string/okay"/>
            <Button
                android:id="@+id/spend_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:text="@string/cancel"/>
        </TableRow>
    </LinearLayout>
</RelativeLayout>