<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/White">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:gravity="center_vertical"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:text="@string/retrieveString"/>

            <EditText
                android:id="@+id/searchBarDateFrom"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:gravity="bottom"
                android:focusable="false"
                android:textColor="@color/Black"
                android:inputType="date"
                android:textSize="16sp"
                android:hint="DateFrom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:gravity="center_vertical"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:text="~"/>

            <EditText
                android:id="@+id/searchBarDateTo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="6dp"
                android:gravity="bottom"
                android:focusable="false"
                android:textColor="@color/Black"
                android:inputType="date"
                android:textSize="16sp"
                android:hint="DateTo"/>
        </LinearLayout>

        <Button
            android:id="@+id/retrieve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:paddingLeft="16dp"
            android:layout_alignParentRight="true"
            android:textColor="@color/Black"
            android:text="@string/retrieve"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="left"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:text="@string/dateString"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:gravity="right"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:text="@string/priceString"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/second_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_weight="1">

        <ExpandableListView
            android:id="@+id/second_expandable_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ExpandableListView>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="left"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:text="@string/toalPriceString"/>

        <TextView
            android:id="@+id/summaryPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:gravity="right"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:text="0"/>
    </RelativeLayout>
</LinearLayout>